--- a/novaspay-frontend/src/App.css
+++ b/novaspay-frontend/src/App.css
@@ -1,14 +1,21 @@
 @import 'tailwindcss';
 
+/* Theme variables */
 @theme inline {
   --color-sidebar-bg: #293a01;
   --color-background: #141414;
-  --color-text-primary: #cfd3dc;
-  --spacing-padding: 1.5rem;
   --color-secondary: #1d1e1f;
   --color-border: #414243;
+  --color-text-primary: #cfd3dc;
+  --spacing-padding: 1.5rem;
 }
 
-* {
-  font-family: 'Times New Roman', Times, serif;
+/* Base styles */
+@layer base {
+  html,
+  body {
+    font-family: 'Times New Roman', Times, serif;
+    color: var(--color-text-primary);
+    background-color: var(--color-background);
+  }
 }
