--- a/novaspay-frontend/src/App.css
+++ b/novaspay-frontend/src/App.css
@@ -1,13 +1,38 @@
 @import 'tailwindcss';
 
-/* Theme variables */
+/* Light mode (default) */
 @theme inline {
   --color-sidebar-bg: #293a01;
-  --color-background: #141414;
-  --color-secondary: #1d1e1f;
-  --color-border: #414243;
-  --color-text-primary: #cfd3dc;
-  --spacing-padding: 1.5rem;
+  --color-sidebar-child: #384d04;
+  --color-background: var(--background);
+  --color-secondary: var(--secondary);
+  --color-border: var(--border);
+  --color-text-primary: var(--text-primary);
+  --color-login-bg: var(--login-bg);
+  --color-header-color: var(--header-color);
+  --color-header-hover: var(--header-hover);
+  --color-button-text: #ffffff;
+}
+
+:root {
+  --background: #f5f7f9;
+  --secondary: #ffffff;
+  --border: #414243;
+  --text-primary: #1d1e1f;
+  --login-bg: #fff;
+  --header-color: #ffffff;
+  --header-hover: #f5f7f9;
+}
+
+/* Dark mode */
+.dark {
+  --background: #141414;
+  --secondary: #1d1e1f;
+  --border: #414243;
+  --text-primary: #cfd3dc;
+  --login-bg: #293145;
+  --header-color: #1d1e1f;
+  --header-hover: #2a2b2c;
 }
 
 /* Base styles */
@@ -18,4 +43,22 @@
     color: var(--color-text-primary);
     background-color: var(--color-background);
   }
+}
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 1px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: #1d1e1f;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #4a5d20;
+  border-radius: 4px;
+  border: 2px solid #1d1e1f;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: #60831a;
 }
