--- a/novaspay-frontend/src/App.css
+++ b/novaspay-frontend/src/App.css
@@ -38,8 +38,12 @@
   --header-hover: #2a2b2c;
 }
 
-.font-size-small {
+.font-size-default {
   font-size: 14px;
+}
+
+.font-size-small {
+  font-size: 12px;
 }
 
 .font-size-large {
